--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
-.vscode/
+.vscode
+*.sublime*
+.idea
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+*.swp
+*.swo
+Thumbs.db
+desktop.ini
